--- a/src/styles/AllNotes.css
+++ b/src/styles/AllNotes.css
@@ -32,7 +32,7 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid black;
-    padding: 2vh;
+    padding: 2vh 2vw;
 }
 
 .buttons_side{
