--- a/src/styles/community.css
+++ b/src/styles/community.css
@@ -51,11 +51,17 @@
     border: 1px solid rgb(201, 201, 201);
     border-radius: 5px;
     width: 100%;
+    cursor: pointer;
 }
 
 .resource_card img{
     width: 100px;
     object-fit: contain;
+}
+
+.resource_card:hover{
+    background-color: black;
+    filter: brightness(0.8);
 }
 
 .resource_info h2, .resource_info p{
