Booking and Add to safe space

--- a/src/styles/community.css
+++ b/src/styles/community.css
@@ -60,7 +60,7 @@
 }
 
 .resource_card:hover{
-    background-color: black;
+    background-color: rgb(218, 218, 218);
     filter: brightness(0.8);
 }
 
